; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_store_byte.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_store_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { i32 (%struct.x86emu*, i32, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.x86emu*, i32, i32, i32)* @store_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @store_byte(%struct.x86emu* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.x86emu*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.x86emu* %0, %struct.x86emu** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.x86emu*, %struct.x86emu** %5, align 8
  %10 = getelementptr inbounds %struct.x86emu, %struct.x86emu* %9, i32 0, i32 0
  %11 = load i32 (%struct.x86emu*, i32, i32)*, i32 (%struct.x86emu*, i32, i32)** %10, align 8
  %12 = load %struct.x86emu*, %struct.x86emu** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = shl i32 %13, 4
  %15 = load i32, i32* %7, align 4
  %16 = add nsw i32 %14, %15
  %17 = load i32, i32* %8, align 4
  %18 = call i32 %11(%struct.x86emu* %12, i32 %16, i32 %17)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
